--- a/two_data_sets.ipynb
+++ b/two_data_sets.ipynb
@@ -27,22 +27,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "x53w1q4nUxk3",
-        "outputId": "21b1d342-659d-406f-82d8-89378644287d"
+        "outputId": "41db0700-877a-43b9-de5d-c5caa5ead73a"
       },
-      "execution_count": 2,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 47,
       "metadata": {
         "id": "XTeRqxe_UssL"
       },
@@ -64,16 +64,16 @@
           "height": 206
         },
         "id": "1OhJhd2CU8Nk",
-        "outputId": "b101b475-de75-4bc8-ad06-4fbf295c85be"
+        "outputId": "efffe06f-758f-423c-c357-06aa54240d1e"
       },
-      "execution_count": 4,
+      "execution_count": 48,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-1c15d8db-4383-48fb-98e7-8ba1a6716823\">\n",
+              "  <div id=\"df-2a315f7d-8b70-4917-bd26-35d35b64424f\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -210,7 +210,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1c15d8db-4383-48fb-98e7-8ba1a6716823')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-2a315f7d-8b70-4917-bd26-35d35b64424f')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -261,12 +261,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-1c15d8db-4383-48fb-98e7-8ba1a6716823 button.colab-df-convert');\n",
+              "          document.querySelector('#df-2a315f7d-8b70-4917-bd26-35d35b64424f button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-1c15d8db-4383-48fb-98e7-8ba1a6716823');\n",
+              "          const element = document.querySelector('#df-2a315f7d-8b70-4917-bd26-35d35b64424f');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -299,7 +299,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 4
+          "execution_count": 48
         }
       ]
     },
@@ -313,9 +313,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "st_YeobfVC-M",
-        "outputId": "94b71f56-2395-43cd-9c2c-44ea870cad64"
+        "outputId": "4282d4c1-7d03-4d2e-ea4f-470c8ccd7e4d"
       },
-      "execution_count": 6,
+      "execution_count": 49,
       "outputs": [
         {
           "output_type": "stream",
@@ -361,7 +361,7 @@
         "<br><br>\n",
         "3) What is the target?\n",
         "<br>\n",
-        "the target will be the round and pick when thet got drafted\n",
+        "the target will be the round the player got drafted\n",
         "<br><br>\n",
         "4) Is this a classification or regression problem?\n",
         "<br>\n",
@@ -398,16 +398,16 @@
           "height": 206
         },
         "id": "fMEQUZDHaeNY",
-        "outputId": "92a23659-3dc3-4482-f3ed-f3e3d24e640a"
+        "outputId": "c5c8618a-99d7-4286-aa11-b2d20893e16c"
       },
-      "execution_count": 44,
+      "execution_count": 50,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/html": [
               "\n",
-              "  <div id=\"df-7e2e9190-420b-489f-b47e-58b4333bb6ef\">\n",
+              "  <div id=\"df-f01b0d71-5c13-4ebc-9e72-92e759f000b8\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -490,7 +490,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7e2e9190-420b-489f-b47e-58b4333bb6ef')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-f01b0d71-5c13-4ebc-9e72-92e759f000b8')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -541,12 +541,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7e2e9190-420b-489f-b47e-58b4333bb6ef button.colab-df-convert');\n",
+              "          document.querySelector('#df-f01b0d71-5c13-4ebc-9e72-92e759f000b8 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7e2e9190-420b-489f-b47e-58b4333bb6ef');\n",
+              "          const element = document.querySelector('#df-f01b0d71-5c13-4ebc-9e72-92e759f000b8');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -579,7 +579,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 44
+          "execution_count": 50
         }
       ]
     },
@@ -593,9 +593,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VdA5-xira5ox",
-        "outputId": "19025ab5-262b-4d14-fd70-8a38ea0c37c7"
+        "outputId": "068de595-70d2-47e5-87dc-e93dce44c231"
       },
-      "execution_count": 45,
+      "execution_count": 51,
       "outputs": [
         {
           "output_type": "stream",
